# Encoder

./: .gitignore  README.md  justfile  proxy-generator.sh
appimage/: AppRun  (+3 more)
backend/: Cargo.toml
backend/src/: main.rs
backend/src/braw/: mod.rs  runner.rs
backend/src/ffmpeg/: mod.rs  progress.rs  runner.rs
backend/src/ipc/: mod.rs  protocol.rs  server.rs
backend/src/jobs/: mod.rs  transcode.rs
backend/src/r3d/: mod.rs  runner.rs
braw-bridge/: CMakeLists.txt
braw-bridge/sdk/Libraries/Linux/: libc++.so.1
braw-bridge/sdk/Samples/ExtractAudio/: ExtractAudio  ExtractAudio.cpp  Makefile
braw-bridge/sdk/Samples/ExtractFrame/: ExtractFrame  ExtractFrame.cpp  Makefile
braw-bridge/sdk/Samples/ExtractFrameMultiVideo/: ExtractFrameMultiVideo  ExtractFrameMultiVideo.cpp  Makefile
braw-bridge/sdk/Samples/ExtractMetadata/: ExtractMetadata  ExtractMetadata.cpp  Makefile
braw-bridge/sdk/Samples/ExtractMotionSamples/: ExtractMotionSamples  ExtractMotionSamples.cpp  Makefile
braw-bridge/sdk/Samples/Geometry/: Geometry.cpp  Makefile
braw-bridge/sdk/Samples/OpenEXRTranscode/: Makefile  OpenEXRTranscode.cpp  Readme.txt
braw-bridge/sdk/Samples/ProcessClipCPU/: Makefile  ProcessClipCPU  ProcessClipCPU.cpp
braw-bridge/sdk/Samples/ProcessClipCUDA/: Makefile  ProcessClipCUDA  ProcessClipCUDA.cpp
braw-bridge/sdk/Samples/ProcessClipManualFlow1/: Makefile  ProcessClipManualFlow1  ProcessClipManualFlow1.cpp
braw-bridge/sdk/Samples/ProcessClipManualFlow2/: Makefile  ProcessClipManualFlow2  ProcessClipManualFlow2.cpp
braw-bridge/src/: main.cpp
frontend/: pyproject.toml
frontend/src/proxy_generator/: __init__.py  __main__.py  app.py  i18n.py  main.py
frontend/src/proxy_generator/ipc/: __init__.py  client.py  protocol.py
r3d-bridge/: CMakeLists.txt
r3d-bridge/R3DSDKv9_1_2/: Broadcast Image Pipeline.txt  How to use the SDK.txt  IPP2 How to use.txt  Nikon N-RAW.txt  Nikon R3D NE.txt  OpenCL kernel caching.txt  Readme.txt  Release history.txt
r3d-bridge/R3DSDKv9_1_2/Include/: R3DSDK.h  R3DSDKCuda.h  R3DSDKCustomIO.h  R3DSDKDecoder.h  R3DSDKDefinitions.h  R3DSDKMetadata.h  R3DSDKMetal.h  R3DSDKOpenCL.h  R3DSDKStream.h
r3d-bridge/src/: main.cpp
(+62 files in other folders)
