[package]
name = "proxy-generator-backend"
version = "0.1.0"
edition = "2021"
description = "Rust-Backend fuer den Proxy Generator – FFmpeg-Steuerung und IPC-Server"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
